--- a/index.html
+++ b/index.html
@@ -18,35 +18,45 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <h2>Рыбный ресторан</h2>
-    <p>Откройте для себя мир изысканных вкусов с нашими рыбными деликатесами.</p>
-    <button>Меню</button>
-  </section>
+  <main>
 
-  <section id="about">
-    <h2>История рыбного искушения</h2>
-    <p>Наша история началась с мечты о создании места, где каждый может насладиться свежей рыбой прямо у себя дома...</p>
-    <img src="https://via.placeholder.com/400x200" alt="Шеф-повар">
-    <button>Узнать больше</button>
-  </section>
+    <section class="hero">
+      <h2>Рыбный ресторан</h2>
+      <p>Откройте для себя мир изысканных вкусов с нашими рыбными деликатесами.</p>
+      <div class="btn-container">
+        <a href="#menu" class="btn">Перейти в меню</a>
+      </div>
+    </section>
 
-  <section id="menu">
-    <h2>Блюда, которые навсегда запомнятся вам</h2>
-    <div class="dish">
-      <h3>Морской бриз</h3>
-      <p>Тарелка морепродуктов, включающая краба, креветки, мидии и соус с зеленью.</p>
-      <p>1300 рублей</p>
-      <button>В корзину</button>
-    </div>
-  </section>
+    <section class="about" id="about">
+      <h2>История рыбного искушения</h2>
+      <p>Наша история началась с мечты о создании места, где каждый может насладиться свежей рыбой прямо у себя дома...</p>
+      <img src="https://via.placeholder.com/400x200" alt="Шеф-повар">
+      <div class="btn-container">
+        <a href="#" class="btn">Узнать больше</a>
+      </div>
+    </section>
 
-  <section id="contacts">
-    <h2>Контакты</h2>
-    <p>Телефон: +7 (955) 478-89-76</p>
-    <p>Email: aquarim@gmail.com</p>
-    <p>Адрес: Москва, ул. Тверская, д.8</p>
-  </section>
+    <section class="menu" id="menu">
+      <h2>Блюда, которые навсегда запомнятся вам</h2>
+      <div class="dish">
+        <h3>Морской бриз</h3>
+        <p>Тарелка морепродуктов, включающая краба, креветки, мидии и соус с зеленью.</p>
+        <p class="price">1300 рублей</p>
+        <div class="btn-container">
+          <a href="#" class="btn">В корзину</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="contacts" id="contacts">
+      <h2>Контакты</h2>
+      <p>Телефон: +7 (955) 478-89-76</p>
+      <p>Email: aquarim@gmail.com</p>
+      <p>Адрес: Москва, ул. Тверская, д.8</p>
+    </section>
+
+  </main>
 
   <footer>
     <p>© 2018–2024 AQUARIM</p>
