--- a/index.html
+++ b/index.html
@@ -3,63 +3,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AQUARIM — Рыбный ресторан</title>
+  <title>Ресторан Ocean Taste</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header>
-    <h1 class="logo">AQUARIM</h1>
+    <div class="logo">Ocean Taste</div>
     <nav>
-      <a href="#about">О ресторане</a>
+      <a href="#hero">Главная</a>
+      <a href="#about">О нас</a>
       <a href="#menu">Меню</a>
-      <a href="#delivery">Доставка и оплата</a>
       <a href="#contacts">Контакты</a>
     </nav>
   </header>
-
   <main>
-
-    <section class="hero">
-      <h2>Рыбный ресторан</h2>
-      <p>Откройте для себя мир изысканных вкусов с нашими рыбными деликатесами.</p>
+    <section class="hero" id="hero">
+      <h2>Добро пожаловать в Ocean Taste</h2>
+      <p>Откройте для себя изысканные блюда из свежих морепродуктов, приготовленные с любовью и вдохновением.</p>
       <div class="btn-container">
-        <a href="#menu" class="btn">Перейти в меню</a>
+        <a href="#menu" class="btn">Посмотреть меню</a>
       </div>
     </section>
-
     <section class="about" id="about">
-      <h2>История рыбного искушения</h2>
-      <p>Наша история началась с мечты о создании места, где каждый может насладиться свежей рыбой прямо у себя дома...</p>
-      <img src="https://via.placeholder.com/400x200" alt="Шеф-повар">
+      <h2>О нашем ресторане</h2>
+      <p>Ocean Taste — это сочетание утончённого вкуса, уютной атмосферы и свежих ингредиентов. Мы готовим только из лучших морепродуктов, чтобы каждая тарелка приносила удовольствие.</p>
+      <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=800&q=80" alt="О нашем ресторане">
       <div class="btn-container">
-        <a href="#" class="btn">Узнать больше</a>
+        <a href="#contacts" class="btn">Связаться с нами</a>
       </div>
     </section>
-
     <section class="menu" id="menu">
-      <h2>Блюда, которые навсегда запомнятся вам</h2>
+      <h2>Наше меню</h2>
+
       <div class="dish">
-        <h3>Морской бриз</h3>
-        <p>Тарелка морепродуктов, включающая краба, креветки, мидии и соус с зеленью.</p>
-        <p class="price">1300 рублей</p>
-        <div class="btn-container">
-          <a href="#" class="btn">В корзину</a>
-        </div>
+        <h3>Лосось на гриле</h3>
+        <p>Нежный лосось, поданный с соусом из лимона и трав.</p>
+        <p class="price">890 ₽</p>
+        <a href="#contacts" class="btn">Заказать</a>
+      </div>
+
+      <div class="dish" style="margin-top: 40px;">
+        <h3>Креветки с чесноком</h3>
+        <p>Обжаренные тигровые креветки в ароматном масле с чесноком.</p>
+        <p class="price">740 ₽</p>
+        <a href="#contacts" class="btn">Заказать</a>
+      </div>
+
+      <div class="dish" style="margin-top: 40px;">
+        <h3>Мидии в сливочном соусе</h3>
+        <p>Свежие мидии, приготовленные в сливочном соусе с белым вином.</p>
+        <p class="price">680 ₽</p>
+        <a href="#contacts" class="btn">Заказать</a>
       </div>
     </section>
-
     <section class="contacts" id="contacts">
-      <h2>Контакты</h2>
-      <p>Телефон: +7 (955) 478-89-76</p>
-      <p>Email: aquarim@gmail.com</p>
-      <p>Адрес: Москва, ул. Тверская, д.8</p>
+      <h2>Свяжитесь с нами</h2>
+      <p>📍 Адрес: г. Санкт-Петербург, ул. Морская, 7</p>
+      <p>📞 Телефон: +7 (812) 123-45-67</p>
+      <p>🕒 Время работы: ежедневно с 10:00 до 23:00</p>
+      <div class="btn-container">
+        <a href="#hero" class="btn">Вернуться наверх</a>
+      </div>
     </section>
 
   </main>
-
   <footer>
-    <p>© 2018–2024 AQUARIM</p>
+    <p>© 2025 Ocean Taste. Все права защищены.</p>
   </footer>
 
 </body>
