--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     </section>
     <section class="contacts" id="contacts">
       <h2>Свяжитесь с нами</h2>
-      <p>📍 Адрес: г. Санкт-Петербург, ул. Морская, 7</p>
-      <p>📞 Телефон: +7 (812) 123-45-67</p>
-      <p>🕒 Время работы: ежедневно с 10:00 до 23:00</p>
+      <p>Адрес: г. Санкт-Петербург, ул. Морская, 7</p>
+      <p>Телефон: +7 (812) 123-45-67</p>
+      <p>Время работы: ежедневно с 10:00 до 23:00</p>
       <div class="btn-container">
         <a href="#hero" class="btn">Вернуться наверх</a>
       </div>
