--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header>
     <div class="logo">Ocean Taste</div>
     <nav>
@@ -16,6 +17,7 @@
       <a href="#contacts">Контакты</a>
     </nav>
   </header>
+
   <main>
     <section class="hero" id="hero">
       <h2>Добро пожаловать в Ocean Taste</h2>
@@ -24,6 +26,7 @@
         <a href="#menu" class="btn">Посмотреть меню</a>
       </div>
     </section>
+
     <section class="about" id="about">
       <h2>О нашем ресторане</h2>
       <p>Ocean Taste — это сочетание утончённого вкуса, уютной атмосферы и свежих ингредиентов. Мы готовим только из лучших морепродуктов, чтобы каждая тарелка приносила удовольствие.</p>
@@ -32,6 +35,7 @@
         <a href="#contacts" class="btn">Связаться с нами</a>
       </div>
     </section>
+
     <section class="menu" id="menu">
       <h2>Наше меню</h2>
 
@@ -56,6 +60,7 @@
         <a href="#contacts" class="btn">Заказать</a>
       </div>
     </section>
+
     <section class="contacts" id="contacts">
       <h2>Свяжитесь с нами</h2>
       <p>Адрес: г. Санкт-Петербург, ул. Морская, 7</p>
@@ -65,11 +70,11 @@
         <a href="#hero" class="btn">Вернуться наверх</a>
       </div>
     </section>
-
   </main>
+
   <footer>
-    <p>© 2025 Ocean Taste. Все права защищены.</p>
+    <p>2025 Ocean Taste. Все права защищены.</p>
   </footer>
 
 </body>
-</html>
+</html>>
