--- a/index.html
+++ b/index.html
@@ -3,78 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ресторан Ocean Taste</title>
+  <title>AQUARIM — Рыбный ресторан</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header>
-    <div class="logo">Ocean Taste</div>
-    <nav>
-      <a href="#hero">Главная</a>
-      <a href="#about">О нас</a>
-      <a href="#menu">Меню</a>
-      <a href="#contacts">Контакты</a>
-    </nav>
+    <div class="container header-container">
+      <h1 class="logo">AQUARIM</h1>
+      <nav>
+        <a href="#about">О ресторане</a>
+        <a href="#menu">Меню</a>
+        <a href="#delivery">Доставка и оплата</a>
+        <a href="#contacts">Контакты</a>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <section class="hero" id="hero">
-      <h2>Добро пожаловать в Ocean Taste</h2>
-      <p>Откройте для себя изысканные блюда из свежих морепродуктов, приготовленные с любовью и вдохновением.</p>
-      <div class="btn-container">
-        <a href="#menu" class="btn">Посмотреть меню</a>
+    <section class="hero">
+      <div class="hero-content">
+        <h2>Рыбный ресторан</h2>
+        <p>Откройте для себя мир изысканных вкусов с нашими рыбными деликатесами.</p>
+        <a href="#menu" class="btn accent">Меню</a>
       </div>
     </section>
 
     <section class="about" id="about">
-      <h2>О нашем ресторане</h2>
-      <p>Ocean Taste — это сочетание утончённого вкуса, уютной атмосферы и свежих ингредиентов. Мы готовим только из лучших морепродуктов, чтобы каждая тарелка приносила удовольствие.</p>
-      <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=800&q=80" alt="О нашем ресторане">
-      <div class="btn-container">
-        <a href="#contacts" class="btn">Связаться с нами</a>
+      <div class="container about-container">
+        <div class="about-text">
+          <h2>История рыбного искушения</h2>
+          <p>Наша история началась с мечты о создании места, где каждый может насладиться свежей рыбой прямо у себя дома. Мы бережно сохраняем традиции, добавляя современные акценты к каждому блюду.</p>
+          <a href="#menu" class="btn">Узнать больше</a>
+        </div>
+        <div class="about-img">
+          <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=700&q=80" alt="Шеф-повар">
+        </div>
       </div>
     </section>
 
     <section class="menu" id="menu">
-      <h2>Наше меню</h2>
-
-      <div class="dish">
-        <h3>Лосось на гриле</h3>
-        <p>Нежный лосось, поданный с соусом из лимона и трав.</p>
-        <p class="price">890 ₽</p>
-        <a href="#contacts" class="btn">Заказать</a>
-      </div>
-
-      <div class="dish" style="margin-top: 40px;">
-        <h3>Креветки с чесноком</h3>
-        <p>Обжаренные тигровые креветки в ароматном масле с чесноком.</p>
-        <p class="price">740 ₽</p>
-        <a href="#contacts" class="btn">Заказать</a>
-      </div>
-
-      <div class="dish" style="margin-top: 40px;">
-        <h3>Мидии в сливочном соусе</h3>
-        <p>Свежие мидии, приготовленные в сливочном соусе с белым вином.</p>
-        <p class="price">680 ₽</p>
-        <a href="#contacts" class="btn">Заказать</a>
+      <div class="container">
+        <h2>Блюда, которые запомнятся вам</h2>
+        <div class="menu-list">
+          <div class="dish">
+            <h3>Морской бриз</h3>
+            <p>Тарелка морепродуктов: краб, креветки, мидии и соус с зеленью.</p>
+            <span class="price">1300 ₽</span>
+            <a href="#" class="btn accent">В корзину</a>
+          </div>
+          <div class="dish">
+            <h3>Лосось с лимоном</h3>
+            <p>Нежный стейк из лосося с лимонным соусом и травами.</p>
+            <span class="price">950 ₽</span>
+            <a href="#" class="btn accent">В корзину</a>
+          </div>
+          <div class="dish">
+            <h3>Мидии по-морски</h3>
+            <p>Свежие мидии в сливочно-чесночном соусе с белым вином.</p>
+            <span class="price">870 ₽</span>
+            <a href="#" class="btn accent">В корзину</a>
+          </div>
+        </div>
       </div>
     </section>
 
     <section class="contacts" id="contacts">
-      <h2>Свяжитесь с нами</h2>
-      <p>Адрес: г. Санкт-Петербург, ул. Морская, 7</p>
-      <p>Телефон: +7 (812) 123-45-67</p>
-      <p>Время работы: ежедневно с 10:00 до 23:00</p>
-      <div class="btn-container">
-        <a href="#hero" class="btn">Вернуться наверх</a>
+      <div class="container">
+        <h2>Контакты</h2>
+        <p>Телефон: +7 (955) 478-89-76</p>
+        <p>Email: aquarim@gmail.com</p>
+        <p>Адрес: Москва, ул. Тверская, д.8</p>
       </div>
     </section>
   </main>
 
   <footer>
-    <p>2025 Ocean Taste. Все права защищены.</p>
+    <div class="container">
+      <p>© 2018–2025 AQUARIM</p>
+    </div>
   </footer>
-
 </body>
-</html>>
+</html>
