--- a/index.html
+++ b/index.html
@@ -7,60 +7,50 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <h1 class="logo">AQUARIM</h1>
-      <nav class="nav">
-        <a href="#">О ресторане</a>
-        <a href="#">Меню</a>
-        <a href="#">Доставка и оплата</a>
-        <a href="#">Контакты</a>
-      </nav>
-    </div>
+
+  <header>
+    <h1 class="logo">AQUARIM</h1>
+    <nav>
+      <a href="#about">О ресторане</a>
+      <a href="#menu">Меню</a>
+      <a href="#delivery">Доставка и оплата</a>
+      <a href="#contacts">Контакты</a>
+    </nav>
   </header>
 
   <section class="hero">
-    <div class="hero-content">
-      <h2>РЫБНЫЙ РЕСТОРАН</h2>
-      <p>Откройте для себя мир изысканных вкусов с нашими деликатесами, приготовленными специально для вас.</p>
-      <a href="#" class="btn">Меню</a>
+    <h2>Рыбный ресторан</h2>
+    <p>Откройте для себя мир изысканных вкусов с нашими рыбными деликатесами.</p>
+    <button>Меню</button>
+  </section>
+
+  <section id="about">
+    <h2>История рыбного искушения</h2>
+    <p>Наша история началась с мечты о создании места, где каждый может насладиться свежей рыбой прямо у себя дома...</p>
+    <img src="https://via.placeholder.com/400x200" alt="Шеф-повар">
+    <button>Узнать больше</button>
+  </section>
+
+  <section id="menu">
+    <h2>Блюда, которые навсегда запомнятся вам</h2>
+    <div class="dish">
+      <h3>Морской бриз</h3>
+      <p>Тарелка морепродуктов, включающая краба, креветки, мидии и соус с зеленью.</p>
+      <p>1300 рублей</p>
+      <button>В корзину</button>
     </div>
   </section>
 
-  <section class="about">
-    <div class="container">
-      <div class="text">
-        <h2>ИСТОРИЯ РЫБНОГО ИСКУШЕНИЯ</h2>
-        <p>
-          Мы создали место, где можно насладиться свежей рыбой прямо из аквариума.  
-          Каждая деталь в нашем ресторане продумана — от вкуса блюд до атмосферы подводного мира.
-        </p>
-        <a href="#" class="link">Узнать больше</a>
-      </div>
-      <img src="https://images.unsplash.com/photo-1553621042-f6e147245754" alt="Шеф повар">
-    </div>
+  <section id="contacts">
+    <h2>Контакты</h2>
+    <p>Телефон: +7 (955) 478-89-76</p>
+    <p>Email: aquarim@gmail.com</p>
+    <p>Адрес: Москва, ул. Тверская, д.8</p>
   </section>
 
-  <section class="menu">
-    <div class="container">
-      <h2>БЛЮДА, КОТОРЫЕ НАВСЕГДА ЗАПОМНЯТСЯ ВАМ</h2>
-      <div class="dish">
-        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836" alt="Морепродукты">
-        <div class="dish-info">
-          <h3>МОРСКОЙ БРИЗ</h3>
-          <p>Тарелка морепродуктов: креветки, краб, мидии и нежные травы под фирменным соусом.</p>
-          <p class="price">1300 ₽</p>
-          <a href="#" class="btn">В корзину</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <footer class="footer">
-    <div class="container">
-      <p>© 2025 AQUARIM — Все права защищены</p>
-      <p>Политика обработки персональных данных</p>
-    </div>
+  <footer>
+    <p>© 2018–2024 AQUARIM</p>
   </footer>
+
 </body>
 </html>
