--- a/HTML проект/index.html
+++ b/HTML проект/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<div class="wrapper">
+<div class="wrapper glow-center">
         <header class="container">
             <span class="AQUARIM">AQUARIM</span>
             <nav>
@@ -19,6 +19,9 @@
                     <li><a href="#">контакты</a></li>
                 </ul>
             </nav>
+            <a href="/cart">
+                <img src="img/Basket.svg" alt="Корзина">
+            </a>
         </header>
 
         <div class="container">
@@ -39,39 +42,50 @@
 
                 <div class="right">
                     <h2>РЕСТОРАН</h2>
-                    <p><img src="/img/Fish.png" alt="">Свежая рыба из наших аквариумов — гарантированная свежесть</p>
-                    <p><img src="/img/Courier.png" alt="">Качественная доставка, где горячие блюда сохраняют свой вкус</p>
+                    <p><img src="/img/Fish.png" alt="" >Свежая рыба из наших аквариумов<br>— гарантированная свежесть</p>
+                    <p><img src="/img/Courier.png" alt="">Качественная доставка, где горячие<br>блюда сохраняют свой вкус</p>
                 </div>
-
             </div>
 
         <img class="fork" src="img/vilka.svg" alt="">
 
         </div>
         </div>
-    
-    <div class="restaurant container">
-        <div class="restaurant-left">
-            <div class="restaurant-header">
-                <section id="about" class="charset">
-                    <h3>О ресторане</h3>
-                </section>
-                <h4 class="title">ИСТОРИЯ РЫБНОГО<br>
-                ИСКУШУНИЯ</h4>
+     
+        <div class="restaurant-wrapper glow-left">
+            <div class="restaurant container">
+                <div class="restaurant-left">
+                    <div class="restaurant-header">
+                        <section id="about" class="charset">
+                            <h3>О ресторане</h3>
+                        </section>
+
+                        <h4 class="title">
+                            <span>ИСТОРИЯ РЫБНОГО</span>
+                            <span>ИСКУШЕНИЯ</span>
+                        </h4>
+                    </div>
+
+                            <p>
+                            Наша история началась с мечты о создании места,<br>
+                            где каждый может насладиться непревзойденным вкусом<br>
+                            свежей рыбы прямо у себя дома. Мы поставили перед<br>
+                            собой задачу предложить нечто большее, чем просто<br>
+                            блюда из рыбы - мы хотели подарить вам настоящее<br>
+                            морское путешествие.
+                            </p>
+
+                            <p>Мы - это место, где каждая деталь имеет значение.</p>
+
+                    <button class="btn">Узнать больше</button>
+                    </div>
+
+                    <div class="restaurant-right">
+                    <img src="/img/Cook.png" class="cook-img" alt="Повар">
+                </div>
             </div>
-                    <p>Наша история началась с мечты о создании места,<br>
-                    где каждый может насладиться непревзойденным вкусом<br>
-                    свежей рыбы прямо у себя дома. Мы поставили перед<br>
-                    собой задачу предложить нечто большее, чем просто<br>
-                    блюда из рыбы - мы хотели подарить вам настоящее<br>
-                    морское путешествие.</p>
-                    <p>Мы - это место, где каждая деталь имеет значение.</p>
-            <button class="btn">узнать больше</button>
         </div>
-            <div class="restaurant-right">
-                <img src="/img/Cook.png" class="cook-img" alt="Повар">
-            </div>
-    </div>
+
 </div>
 </body>
 </html>
